--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: cutepaste
 Section: net
 Priority: extra
 Maintainer: Howard Chan <smartboyhw@gmail.com>
-Build-Depends: debhelper (>= 9), cmake, qtbase5-dev
+Build-Depends: debhelper (>= 9), cmake, qtbase5-dev, pkg-kde-tools
 Standards-Version: 3.9.4
 Homepage: https://projects.kde.org/projects/playground/network/cutepaste
 
